syntax = "proto3";

option go_package = "UESTC-LHY/cache";

package cache;

service Cache {
  rpc GetCache (GetRequest) returns (GetReply) {}
  rpc PostCache (PostRequest) returns (PostReply) {}
  rpc DeleteCache (DeleteRequest) returns (DeleteReply) {}
}

message GetRequest {
    string key = 1;
}

message GetReply {
    string key = 1;
    string value = 2;
    int32 isOk = 3;
}

message PostRequest {
    string key = 1;
    string value = 2;
}

message PostReply {
    int32 isOk = 1;
}

message DeleteRequest {
    string key = 1;
}

message DeleteReply {
    int32 isOk = 1;
}

